--- a/app/views/ruby_lessons/lessons/lesson_18.html.erb
+++ b/app/views/ruby_lessons/lessons/lesson_18.html.erb
@@ -34,3 +34,5 @@
 <p class="alert alert-success">
 	Remember, this challenge is supposed to be difficult! Don't hesitate to reach out to the community for help!
 </p>
+
+<% @submission_form = true %>
