--- a/app/views/ruby_lessons/lessons/lesson_3.html.erb
+++ b/app/views/ruby_lessons/lessons/lesson_3.html.erb
@@ -73,7 +73,7 @@ cd ..
 <%= image_tag 'ruby_lessons/3-4.png', class: 'screenshot' %>
 
 <p>
-  Typing <code>..</code> will direct you to the directory above the current directory.
+  As you can see, typing <code>..</code> will direct you to the directory above the current directory.
 </p>
 
 <p>
