--- a/app/views/ruby_lessons/lessons/lesson_5.html.erb
+++ b/app/views/ruby_lessons/lessons/lesson_5.html.erb
@@ -35,7 +35,7 @@ irb
 </p>
 
 <p>
-  You can do any type of math. <code>+</code>, <code>-</code>, <code>*</code>, <code>/</code> all work. Try them out in the Ruby console.
+  You can do any type of math - addition(<code>+</code>), subtraction(<code>-</code>), multiplication(<code>*</code>), and division(<code>/</code>) all work. Try them out in the Ruby console.
 </p>
 
 <h3>Integers</h3>
