--- a/app/views/bootstrap_lessons/lessons/lesson_4.html.erb
+++ b/app/views/bootstrap_lessons/lessons/lesson_4.html.erb
@@ -17,7 +17,7 @@
     &lt;/div&gt;&lt;!-- /.container-fluid --&gt;
   &lt;/nav&gt;
 
-  &lt;div class = "container"&gt;
+  &lt;div class = "container-fluid"&gt;
   &lt;/div&gt;
 
 </code></pre>
