--- a/app/views/ruby_lessons/lessons/lesson_3.html.erb
+++ b/app/views/ruby_lessons/lessons/lesson_3.html.erb
@@ -9,7 +9,7 @@
 </p>
 
 <p>
-  Here is a list of the commands we will be convering:
+  Here is a list of the commands we will be covering:
 </p>
 
 <ul>
