--- a/app/views/ruby_lessons/lessons/lesson_4.html.erb
+++ b/app/views/ruby_lessons/lessons/lesson_4.html.erb
@@ -131,6 +131,7 @@ puts "Today's an awesome day for coding!"
 # this is a comment
 puts "Hello world"
 # text after hash tags cannot be seen
+put "Today's an awesome day for coding!"
 </code></pre>
 
 <p>
