--- a/app/views/ruby_lessons/lessons/lesson_5.html.erb
+++ b/app/views/ruby_lessons/lessons/lesson_5.html.erb
@@ -5,7 +5,7 @@
 </p>
 
 <p class="alert alert-info">
-  Most math you will encounter in programming won't be calculus or advanced math at all. Most of the math will be simple operations that you probably know already.
+  Most math you will encounter in web development won't be calculus or advanced math at all. Most of the math will be simple operations that you probably know already.
 </p>
 
 <p>
@@ -19,7 +19,7 @@ irb
 <%= image_tag 'ruby_lessons/irb.png', class: 'screenshot' %>
 
 <p>
-  <code>irb</code> stands for <strong>I</strong>nteractive <strong>R</strong>uby <strong>C</strong>onsole. In this console, we can write and execute Ruby code. In other words, instead of creating a new Ruby file, saving it, and running it with the <code>ruby</code> command, we can simply run the <strong>Ruby code inside this console with <code>irb</code></strong>.
+  <code>irb</code> stands for <strong>I</strong>nteractive <strong>R</strong>uby console. In this console, we can write and execute Ruby code. In other words, instead of creating a new Ruby file, saving it, and running it with the <code>ruby</code> command, we can simply run the <strong>Ruby code inside this console with <code>irb</code></strong>.
 </p>  
 
 <p>
@@ -96,7 +96,7 @@ irb
   <h3>Data Types</h3>
 
   <p>
-    If you are just beginning in your programming career, you might may write code like this:
+    If you are just beginning in your programming career, you might sometimes accidentally write code like this:
   </p>  
 
 <pre><code class="irb">
