--- a/app/views/ruby_lessons/lessons/lesson_7.html.erb
+++ b/app/views/ruby_lessons/lessons/lesson_7.html.erb
@@ -59,7 +59,7 @@ name
 </code></pre>
 
 <p>
-  We can override the value inside <code>name</code> by assigning it another value:
+  We can see that <code>name</code> is currently assigned to <code>"Takehiro Mouri"</code>. We can override the value inside <code>name</code> by assigning it another value:
 </p>
 
 <pre><code class="irb">
@@ -67,6 +67,10 @@ name = "Natsuko Robyn Shinozaki"
 name
 => "Natsuko Robyn Shinozaki"
 </code></pre>
+
+<p>
+  Now <code>name</code> holds the value <code>"Natsuko Robyn Shinozaki"</code>.
+</p>
 
 <h3>String Interpolation</h3>
 
