--- a/app/views/ruby_lessons/lessons/lesson_8.html.erb
+++ b/app/views/ruby_lessons/lessons/lesson_8.html.erb
@@ -270,7 +270,7 @@ people[0][1]
   <li>You can access elements by inserting the index like such: <code>people[1]</code> (returns the 2nd element)</li>
   <li>There are many array methods that are easy to use</li>
   <li>Ruby arrays can contain data of different types</li>
-  <li>Arrays can store arrays within itself</li>
+  <li>Arrays can store arrays within itself (<em>multidimensional arrays</em>)</li>
 </ul>
 
 
