--- a/app/views/ruby_lessons/lessons/lesson_9.html.erb
+++ b/app/views/ruby_lessons/lessons/lesson_9.html.erb
@@ -107,6 +107,21 @@ number /= 10
 number
 => 10
 </code></pre>
+
+<p>
+  We are basically taking the existing value of the variable and performing mathematical operations on them. For example:
+</p>
+
+<pre><code class="ruby">
+number = 5
+
+# This is the same as
+number *= 10  
+
+# this
+5 * 10
+</code></pre>
+
 </div>
 
 <p>
