--- a/app/views/ruby_lessons/lessons/lesson_10.html.erb
+++ b/app/views/ruby_lessons/lessons/lesson_10.html.erb
@@ -357,7 +357,7 @@ end
   The program should run like this:
 </p>
 
-<%= image_tag 'ruby_lessons/word_counter', class: 'img-responsive screenshot' %>
+<%= image_tag 'ruby_lessons/word_counter.png', class: 'img-responsive screenshot' %>
 
 <p><strong>This is a tricky problem!</strong> Good luck on this challenge!</p>
 
