--- a/app/views/ruby_lessons/lessons/lesson_15.html.erb
+++ b/app/views/ruby_lessons/lessons/lesson_15.html.erb
@@ -7,7 +7,7 @@
 	</p>
 
 	<p>
-		For example, in real life, each order consists of different food items and different prices. Like this, in classes, each <em>instance</em> of a class will have different values for various attributes.
+		For example, in real life, each order consists of different food items and different prices. Similarly, in classes, each <em>instance</em> of a class will have different values for various attributes.
 	</p> 
 
 	<p>
