--- a/app/views/ruby_lessons/lessons/lesson_15.html.erb
+++ b/app/views/ruby_lessons/lessons/lesson_15.html.erb
@@ -36,7 +36,7 @@ end
 </code></pre>
 
 <p>
-	Now that we know what the <code>initialize</code> method is and what instance variablse are, let's fix our program:
+	Now that we know what the <code>initialize</code> method is and what instance variables are, let's fix our program:
 </p>
 
 <pre><code class="ruby">
