--- a/app/views/ruby_lessons/lessons/lesson_16.html.erb
+++ b/app/views/ruby_lessons/lessons/lesson_16.html.erb
@@ -212,7 +212,7 @@ puts "Age: " + cat.age
 </p>
 
 <p>
-	Fortunately in Ruby, we can define these setter and getter methods in a much more concise way. Introducing <code>attr_reader</code> and <code>attr_writer</code>.
+	<strong>Fortunately in Ruby, we can define these setter and getter methods in a much more concise way. Introducing <code>attr_reader</code> and <code>attr_writer</code>.</strong>
 </p>
 
 <p>
