fix titles on ruby lessons

--- a/app/views/ruby_lessons/lessons/lesson_21.html.erb
+++ b/app/views/ruby_lessons/lessons/lesson_21.html.erb
@@ -1,3 +1,5 @@
+<h1><%= title_for(RubyLesson, 3, 3) %></h1>
+
 <p>Now that you have learned the basic of Test-First Ruby, let's solve another challenge that includes the Test-First approach. In this lesson, you have to write code to make the test pass.</p>
 
 <h3>Temperature Conversion</h3>
