--- a/app/views/ruby_lessons/lessons/lesson_20.html.erb
+++ b/app/views/ruby_lessons/lessons/lesson_20.html.erb
@@ -1,3 +1,5 @@
+<h1><%= title_for(RubyLesson, 3, 2) %></h1>
+
 <p>
   Now that you have some experience with Ruby codes, let's get familiar with some testing the ruby codes.
 </p>
