--- a/app/views/instapost_lessons/lessons/lesson_2.html.erb
+++ b/app/views/instapost_lessons/lessons/lesson_2.html.erb
@@ -17,7 +17,7 @@ git init .
 </p>
 
 <pre><code class="bash">
-Initialized empty Git repository in /Users/YourUsername/desktop/instapost
+Initialized empty Git repository in /home/ubuntu/workspace/.git/
 </code></pre>
 
 <p>
@@ -45,7 +45,7 @@ git commit -am “Initial commit”
 </p>
 
 <p>
-  On the next page, go to the sections thatsays <strong>“…or push an existing repository from the command line”</strong>.
+  On the next page, go to the sections that says <strong>“…or push an existing repository from the command line”</strong>.
 </p>
 
 <p>
@@ -53,7 +53,7 @@ git commit -am “Initial commit”
 </p>
 
 <pre><code class="bash">
-git remote add origin git@github.com:YourGithubUsername/test.git
+git remote add origin git@github.com:YourGithubUsername/instapost.git
 </code></pre>
 
 <pre><code class="bash">
@@ -61,7 +61,7 @@ git push -u origin master
 </code></pre>
 
 <p class="alert alert-danger">
-  Make sure you replace <code>git@github.com:YourGithubUsername/test.git</code> with your username.
+  Make sure you replace <code>git@github.com:YourGithubUsername/instapost.git</code> with your username.
 </p>
 
 <p>
