--- a/app/views/ideator_lessons/lessons/lesson_1.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_1.html.erb
@@ -14,10 +14,6 @@
 	</ul>
 </div>
 
-<p class="alert alert-warning">
-	Make sure you already have Rails installed in your system. If you haven't been able to do so yet, reach out to a mentor before proceeding in the course.
-</p>
-
 <p>
 	Let's get started!
 </p>
@@ -85,75 +81,6 @@
 	First, let's open up our terminal.
 </p>
 
-<!-- <div class="well">
-	<h3>Command Line Crash Course</h3>
-
-	<p>
-		<code>cd</code> <strong>stands for <em>change directory</em>.</strong> We can use the <code>cd</code> command to navigate to different folders in the terminal.
-	</p>
-
-	<%= create_flashcard %>
-
-	<p>
-		By default, the directory will be at the root directory of the user that is signed in (typically it is <code>/Users/YourNameHere</code>). We can move to different folders within our computer inside the terminal.
-	</p>
-
-	<p>
-		For example, let's go to the <code>desktop</code> directory. In the terminal, let's type in the following command and press enter:
-	</p>
-
-<pre><code class="bash">
-cd ~/desktop
-</code></pre>
-
-	<p>
-		The <code>~</code> means the root directory. We can display all of our folders in our desktop. To do so, let's go into the terminal and type the following command press enter:
-	</p>
-
-<pre><code class="bash">
-ls
-</code></pre>	
-	<p>
-		This should print out all of your files in your desktop. We can also navigate to other folders as well. For example, let's navigate to the <code>Documents</code> folder. In your terminal, type in the following and press enter:
-	</p>	
-
-<pre><code class="bash">
-cd ~/documents
-</code></pre>
-
-	<p>
-		Once again, let's view all of our folders inside our <code>Documents</code>. In your terminal, type in the following and press enter:
-	</p>
-
-<pre><code class="bash">
-ls
-</code></pre>
-	<p>
-		You should now see all of your folders displayed in your terminal. Awesome!
-	</p>	
-</div>
-
-<p>
-	In the terminal, let’s navigate to our desktop. In your terminal, type in the following and press enter:
-</p>
-
-
-<pre><code class="bash">
-cd ~/desktop
-</code></pre>
-
-<p>
-	This is where we’ll create our ideator app. In the terminal that we just opened up, let’s type in the following command and press enter:
-</p>
-
-
-<pre><code class="bash">
-rails new ideator
-</code></pre>
-
-<p>
-	This command magically creates a new rails application. Awesome!
-</p> -->
 
 <div class="well">
 	<h3>How to create a new Rails application</h3>
@@ -189,6 +116,7 @@ rails new app_name
 
 <pre><code class="bash">
 rake db:create:all
+rake db:migrate
 </code></pre>
 
 <!-- <div class="well">
