add blurb about wireframing

--- a/app/views/ideator_lessons/lessons/lesson_3.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_3.html.erb
@@ -12,11 +12,23 @@
 	So here’s what I did for this app. I took out a piece of paper and just drew up some rough sketches for the app like this:
 </p>
 
-<%= image_tag 'ideator/ideator_wireframes.jpg', class: 'img-responsive screenshot' %>
+<%= image_tag 'ideator/ideator_wireframes.jpg', class: 'img-responsive screenshot', style: 'width: 40%; margin: 0 auto;' %>
 
 <p>
-	As you can see, the wireframes don't have to be perfect, it just needs to get the job done! The key here is to visualize what features you want on your web application so that it's easier to think through how to build your web application.
+	As you can see, the wireframes don't have to be perfect, it just needs to get the job done. Especially for smaller applications like Ieator, the key here is to visualize what features you want on your web application so that it's easier to think through how to build your web application.
 </p>
+
+<div class="well">
+	<h3>Wireframing Applications</h3>
+
+	<p>
+		There are multiple applications to draw up mock ups such as <%= link_to 'Balsamic', 'https://balsamiq.com/', target: '_blank' %>, Mockingbird, and many more. These applications are fantastic tools that you can use to draw simple mocks for your application. 
+	</p>
+
+	<p>
+		While using these applications are effective, often times drawing them out on a whiteboard or on a piece of paper gets the job done. However, ultimately, it's up to you on what tools you want to use.
+	</p>
+</div>
 
 <h3>What kind of information do we need to store?</h3>
 
