--- a/app/views/static_pages/guidelines.html.erb
+++ b/app/views/static_pages/guidelines.html.erb
@@ -44,7 +44,7 @@
 		<li>Book mentor sessions by Saturday evening</li>
 		<li>If cancelling, inform your mentor two hours in advance. When running late, let your mentor know.  (Late : 30 minutes later than scheduled time) </li>
 		<li>2 lates - friendly warning, 3 lates and beyond- the mentor sessions for the week will be terminated</li>
-		<li>Mentor sessions are only available 12 times. They will expire after 3 ½ months ( meaning that even if you have not completed 12 mentor scheduled sessions, you will automatically not be able to take them). </li>
+		<li>Mentor sessions are only available 16 times (4 times for remote course). They will expire after 2 ½ months ( meaning that even if you have not completed 16 mentor scheduled sessions, you will automatically not be able to take them). (They will expire after 1 ½ months for remote course) </li>
 	</ul>
 
 
