--- a/app/views/public_activity/flashcard/_complete.html.erb
+++ b/app/views/public_activity/flashcard/_complete.html.erb
@@ -1,8 +1,3 @@
-<% display_name = "You" %>
-<% owner = User.find(activity.owner_id) %>
-
-<!-- for later use <% activity_user_name = User.find(activity.owner_id).name %> -->
-
 <div class="row">
   <div class="col-xs-1">
     <i class="fa fa-check activity_icon" aria-hidden="true"></i> 
@@ -10,7 +5,7 @@
 
   <div class="col-xs-11">
     <span class="activity_time"><small><%= time_ago_in_words(activity.created_at) %> ago</small></span><br>
-    <strong><%= owner.name %> completed a flashcard</strong><br>
-    <%= image_tag owner.avatar, class: 'prof_pic_xs' %><span class="activity_description"></span>
+    <strong><%= activity.owner.name %> completed a flashcard</strong><br>
+    <%= image_tag activity.owner.avatar, class: 'prof_pic_xs' %><span class="activity_description"></span>
   </div>
 </div>
