--- a/app/views/layouts/_nav_contents.html.erb
+++ b/app/views/layouts/_nav_contents.html.erb
@@ -34,7 +34,7 @@
 
                     <li class="nav-item page-scroll">
                       <%
-                        @due_cards = current_user.cards.due                        
+                        @due_cards ||= current_user.cards.due                        
                       %>
                       <%= link_to "STUDY CARDS <span class='badge nav-badge'>#{@due_cards.count}</span>".html_safe, study_path %>
                     </li>
