--- a/app/views/instapost_lessons/lessons/lesson_31.html.erb
+++ b/app/views/instapost_lessons/lessons/lesson_31.html.erb
@@ -11,15 +11,15 @@
   &lt;div class="post_box"&gt;
 
     &lt;div class="post_header"&gt;
-      &lt;%= image_tag User.find(post.user_id).photo, class: 'prof_pic_small' %&gt;
-      &lt;%= link_to User.find(post.user_id).name, user_path(post.user_id) %&gt;
+      &lt;%= image_tag post.user.photo, class: 'prof_pic_small' %&gt;
+      &lt;%= link_to post.user.name, user_path(post.user_id) %&gt;
     &lt;/div&gt;
 
     &lt;%= image_tag post.photo, class: 'photo' %&gt;
     
     &lt;div class="post_body"&gt;
 
-      &lt;%= link_to User.find(post.user_id).name, user_path(post.user_id) %&gt; &lt;%= post.description %&gt;
+      &lt;%= link_to post.user.name, user_path(post.user_id) %&gt; &lt;%= post.description %&gt;
 
     &lt;/div&gt;
 
@@ -27,7 +27,7 @@
 
       &lt;% post.comments.each do |comment| %&gt;
 
-        &lt;%= link_to User.find(comment.user_id).name,  user_path(comment.user_id) %&gt; &lt;%= comment.text %&gt;
+        &lt;%= link_to comment.user.name,  user_path(comment.user_id) %&gt; &lt;%= comment.text %&gt;
 
       &lt;% end %&gt;
 
@@ -83,8 +83,8 @@
 
 <pre><code class="erb">
 &lt;div class="post_header"&gt;
-  &lt;%= image_tag User.find(post.user_id).photo, class: 'prof_pic_small' %&gt;
-  &lt;%= link_to User.find(post.user_id).name, user_path(post.user_id) %&gt;
+  &lt;%= image_tag post.user.photo, class: 'prof_pic_small' %&gt;
+  &lt;%= link_to post.user.name, user_path(post.user_id) %&gt;
   &lt;span class="timestamp pull-right"&gt;&lt;%= distance_of_time_in_words(DateTime.now, post.created_at) %&gt; ago&lt;/span&gt;
 &lt;/div&gt;
 </code></pre>
