--- a/app/views/submissions/show.html.erb
+++ b/app/views/submissions/show.html.erb
@@ -2,15 +2,7 @@
 
 <div class="devise_box forum_container">
 
-  <% flash.each do |message_type, message| %>
-    <% if message_type == "notice" %>
-      <p class="alert alert-info alert-dismissible text-center"><button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button><%= notice %></p>
-    <% elsif message_type == "alert" %>
-      <p class="alert alert-danger alert-dismissible text-center"><button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button><%= alert %></p>
-    <% else %>
-      <div class="alert alert-<%= message_type %> alert-dismissible text-center"><button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button><%= message %></div>
-    <% end %>
-  <% end %>
+  <%= render "shared/flash_messages" %>
 
   <div class="row">
     <div class="col-xs-12 col-sm-2">
